module/batch/vpc.tf
resource "aws_security_group" "sample" {
  name   = "aws_batch_compute_environment_security_group"
  vpc_id = aws_vpc.sample.id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_vpc" "sample" {
  cidr_block = "10.1.0.0/16"
}

resource "aws_subnet" "sample" {
  vpc_id     = aws_vpc.sample.id
  cidr_block = "10.1.1.0/24"
}
